--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlashCards</title>
-</head>
+    <title>LITERAFLIX</title>
+    <link rel="stylesheet" href="styles.css">
+    </head>
+
 <body>
     <header>LITERAFLIX</header>
+    <section>
+    <div>
     <h1>Qual é a sua obra preferida?!</h1>
-<p>#BoraLer</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/WGZFBePibF0?si=stfL1yH6sePrXIcn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>#BoraLer</p>
+    </div>
+    <div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/WGZFBePibF0?si=stfL1yH6sePrXIcn"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+    </section>    
 </body>
+
 </html>
