--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>LITERAFLIX</header>
     <section>
-    <div>
+    <div class="chamada-texto">
     <h1>Qual é a sua obra preferida?!</h1>
     <p>#BoraLer</p>
     </div>
