--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
+    </section>
+    <section>
+        <h2>SÉRIES</h2>
+        <div class="categoria-vídeos">
+            <a href="https://www.youtube.com/watch?v=5yynWK4TX3o">
+                <img src="https://img.youtube.com/vi/5yynWK4TX3o/maxresdefault.jpg"/>
+            </a>
+
+        </div>
     </section>    
 </body>
 
