--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
             <a href="https://www.youtube.com/watch?v=5yynWK4TX3o">
                 <img src="https://img.youtube.com/vi/5yynWK4TX3o/maxresdefault.jpg"/>
             </a>
-
+            <a href="https://www.youtube.com/watch?v=9WFpv_lPcK0">
+                <img src="https://img.youtube.com/vi/9WFpv_lPcK0/maxresdefault.jpg"/>
+            </a>
+            <a href="https://www.youtube.com/watch?v=sQRLCi8QdEg">
+                <img src="https://img.youtube.com/vi/sQRLCi8QdEg/maxresdefault.jpg"/>
+            </a>
+            <a href="https://www.youtube.com/watch?v=_ZK1UC6PACk">
+                <img src="https://img.youtube.com/vi/_ZK1UC6PACk/maxresdefault.jpg"/>
+            </a>
+            <a href="https://www.youtube.com/watch?v=CYw2GoRcMuc">
+                <img src="https://img.youtube.com/vi/CYw2GoRcMuc/maxresdefault.jpg"/>
+            </a>
         </div>
     </section>    
 </body>
