--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
     <section>
         <h2>SÉRIES</h2>
-        <div class="categoria-vídeos">
+        <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=5yynWK4TX3o">
                 <img src="https://img.youtube.com/vi/5yynWK4TX3o/maxresdefault.jpg"/>
             </a>
