--- a/index.html
+++ b/index.html
@@ -5,43 +5,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>LITERAFLIX</title>    
-    </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet" />
+
+    <title>LITERAFLIX</title>
+</head>
 
 <body>
     <header>LITERAFLIX</header>
     <section>
-    <div class="chamada-texto">
-    <h1>Qual é a sua obra preferida?!</h1>
-    <p>#BoraLer</p>
-    </div>
-    <div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/WGZFBePibF0?si=stfL1yH6sePrXIcn"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
+        <div class="chamada-texto">
+            <h1>Qual é a sua obra preferida?!</h1>
+            <p>#BoraLer</p>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/WGZFBePibF0?si=stfL1yH6sePrXIcn"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
     </section>
     <section>
         <h2>SÉRIES</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=5yynWK4TX3o">
-                <img src="https://img.youtube.com/vi/5yynWK4TX3o/maxresdefault.jpg"/>
+                <img src="https://img.youtube.com/vi/5yynWK4TX3o/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=9WFpv_lPcK0">
-                <img src="https://img.youtube.com/vi/9WFpv_lPcK0/maxresdefault.jpg"/>
+                <img src="https://img.youtube.com/vi/9WFpv_lPcK0/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=sQRLCi8QdEg">
-                <img src="https://img.youtube.com/vi/sQRLCi8QdEg/maxresdefault.jpg"/>
+                <img src="https://img.youtube.com/vi/sQRLCi8QdEg/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=_ZK1UC6PACk">
-                <img src="https://img.youtube.com/vi/_ZK1UC6PACk/maxresdefault.jpg"/>
+                <img src="https://img.youtube.com/vi/_ZK1UC6PACk/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=CYw2GoRcMuc">
-                <img src="https://img.youtube.com/vi/CYw2GoRcMuc/maxresdefault.jpg"/>
+                <img src="https://img.youtube.com/vi/CYw2GoRcMuc/maxresdefault.jpg" />
             </a>
         </div>
-    </section>    
+    </section>
 </body>
 
 </html>
