--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="chamada">
         <div class="chamada-texto">
             <h1>Literatura em Filmes e Séries</h1>
-            <p>#BoraLer</p>
+            <p>#BoraVerLer</p>
         </div>
 
         <div>
@@ -49,7 +49,7 @@
             </a>
         </div>
     </section>
-    
+
 </body>
 
 </html>
